# ObsidianWorkspaceMCP

./: .gitignore  README.md  pyproject.toml
src/obsidian_workspace_mcp/: __init__.py  __main__.py  models.py  server.py  vault.py
tests/: test_templates.py  test_tree.py  test_vault.py
