[project]
name = "obsidian-workspace-mcp"
version = "0.1.0"
description = "Minimal MCP server for safe, agent-friendly Obsidian vault operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
obsidian-workspace-mcp = "obsidian_workspace_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_workspace_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
